Support MySQL default isolation and recover transient lease failures
Signed-off-by: Jonathan Putney <jputney@noverant.com>